--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^1.0.0",
     "express": "^4.16.4",
+    "fetch": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mysql": "^2.16.0",
     "node-sass": "^4.9.4",
