--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "carlos arenas",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -18,6 +19,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.18.3",
     "css-loader": "^1.0.0",
     "express": "^4.16.4",
     "fetch": "^1.1.0",
